index.css
body{
  background-image: url("deep.jpg");
  background-color:black;

  color:yellow;
  margin:auto;
  width: 50%;
  padding: 10px;
  text-align: left;
  font: monospace;
}
a{
  color:white;
}
img{
    width:50%;
    max-width:600px;
}
@media print {
    html {
        filter: invert(1);
    }
}

